# game-market-analytics

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: entities.yml  metrics.yml  sources.yml
dbt/: dbt_project.yml  profiles.example.yml
dbt/macros/: title_normalization.sql
dbt/models/marts/: _marts__models.yml
dbt/models/marts/steam/: mart_steam__catalog_reputation_current.sql  mart_steam__catalog_reputation_enriched_current.sql
dbt/models/staging/igdb/: _igdb__models.yml  (+7 more)
docs/: data-model.md  dbt-igdb-reference.md  dbt-steam-app-catalog.md  dbt-steam-catalog-reputation-mart.md  dbt-steam-igdb-crosswalk.md  dbt-steam-igdb-enriched-mart.md  dbt-steam-reviews.md  domain.md  igdb-reference-ingestion.md  igdb-reference-staging.md  kpis.md  roadmap.md  setup.md  source-assessment.md  steam-app-catalog-ingestion.md  steam-app-catalog-staging.md  steam-reviews-ingestion.md  steam-reviews-staging.md
src/game_market_analytics/: __init__.py  cli.py  config.py  paths.py
src/game_market_analytics/ingestion/: __init__.py
src/game_market_analytics/matching/: __init__.py
src/game_market_analytics/normalization/: __init__.py
src/game_market_analytics/orchestration/: __init__.py
src/game_market_analytics/quality/: __init__.py
src/game_market_analytics/utils/: __init__.py
tests/unit/: test_config.py  test_igdb_auth_client.py  test_igdb_reference.py  test_paths.py  test_stage_igdb_reference.py  test_stage_steam_app_catalog.py  test_stage_steam_reviews.py  test_steam_app_catalog.py  test_steam_client.py  test_steam_reviews.py
(+17 files in other folders)
