[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "game-market-analytics"
version = "0.1.0"
description = "Local-first game market analytics and gaming product analytics project."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "PhaifferTech" }
]
dependencies = [
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.0",
  "dbt-core>=1.8.0",
  "dbt-duckdb>=1.8.0"
]

[project.scripts]
game-market-analytics = "game_market_analytics.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
